Added get user list endpoint
