# public/docs/openapi.yaml
@@ -100,10 +100,175 @@ paths:
       tags:
         - Healthcheck
       security: []
+  /api/v1/users:
+    get:
+      summary: ''
+      operationId: getApiV1Users
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  data:
+                    -
+                      id: 27
+                      first_name: Weldon
+                      last_name: Brakus
+                      email_verified_at: '2024-01-05T19:44:20.000000Z'
+                      created_at: '2024-01-05T19:44:21.000000Z'
+                      updated_at: '2024-01-05T19:44:21.000000Z'
+                    -
+                      id: 28
+                      first_name: Delphine
+                      last_name: Considine
+                      email_verified_at: '2024-01-05T19:44:21.000000Z'
+                      created_at: '2024-01-05T19:44:21.000000Z'
+                      updated_at: '2024-01-05T19:44:21.000000Z'
+                  links:
+                    first: '/?page=1'
+                    last: '/?page=1'
+                    prev: null
+                    next: null
+                  meta:
+                    current_page: 1
+                    from: 1
+                    last_page: 1
+                    links:
+                      -
+                        url: null
+                        label: '&laquo; Previous'
+                        active: false
+                      -
+                        url: '/?page=1'
+                        label: '1'
+                        active: true
+                      -
+                        url: null
+                        label: 'Next &raquo;'
+                        active: false
+                    path: /
+                    per_page: 10
+                    to: 2
+                    total: 2
+                properties:
+                  data:
+                    type: array
+                    example:
+                      -
+                        id: 27
+                        first_name: Weldon
+                        last_name: Brakus
+                        email_verified_at: '2024-01-05T19:44:20.000000Z'
+                        created_at: '2024-01-05T19:44:21.000000Z'
+                        updated_at: '2024-01-05T19:44:21.000000Z'
+                      -
+                        id: 28
+                        first_name: Delphine
+                        last_name: Considine
+                        email_verified_at: '2024-01-05T19:44:21.000000Z'
+                        created_at: '2024-01-05T19:44:21.000000Z'
+                        updated_at: '2024-01-05T19:44:21.000000Z'
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          example: 27
+                        first_name:
+                          type: string
+                          example: Weldon
+                        last_name:
+                          type: string
+                          example: Brakus
+                        email_verified_at:
+                          type: string
+                          example: '2024-01-05T19:44:20.000000Z'
+                        created_at:
+                          type: string
+                          example: '2024-01-05T19:44:21.000000Z'
+                        updated_at:
+                          type: string
+                          example: '2024-01-05T19:44:21.000000Z'
+                  links:
+                    type: object
+                    properties:
+                      first:
+                        type: string
+                        example: '/?page=1'
+                      last:
+                        type: string
+                        example: '/?page=1'
+                      prev:
+                        type: string
+                        example: null
+                      next:
+                        type: string
+                        example: null
+                  meta:
+                    type: object
+                    properties:
+                      current_page:
+                        type: integer
+                        example: 1
+                      from:
+                        type: integer
+                        example: 1
+                      last_page:
+                        type: integer
+                        example: 1
+                      links:
+                        type: array
+                        example:
+                          -
+                            url: null
+                            label: '&laquo; Previous'
+                            active: false
+                          -
+                            url: '/?page=1'
+                            label: '1'
+                            active: true
+                          -
+                            url: null
+                            label: 'Next &raquo;'
+                            active: false
+                        items:
+                          type: object
+                          properties:
+                            url:
+                              type: string
+                              example: null
+                            label:
+                              type: string
+                              example: '&laquo; Previous'
+                            active:
+                              type: boolean
+                              example: false
+                      path:
+                        type: string
+                        example: /
+                      per_page:
+                        type: integer
+                        example: 10
+                      to:
+                        type: integer
+                        example: 2
+                      total:
+                        type: integer
+                        example: 2
+      tags:
+        - Users
 tags:
   -
     name: Auth
     description: ''
   -
     name: Healthcheck
+    description: ''
+  -
+    name: Users
     description: ''
