# routes/v1/users.php
@@ -1,0 +1,7 @@
+<?php
+
+declare(strict_types=1);
+
+use App\Http\Controllers\V1\Users\IndexController;
+
+Route::get('/', IndexController::class)->name('index');
